--- a/FrontendFoodAnnotation/package.json
+++ b/FrontendFoodAnnotation/package.json
@@ -18,6 +18,7 @@
     "@angular/core": "~9.0.3",
     "@angular/fire": "^6.0.0",
     "@angular/forms": "~9.0.3",
+    "@angular/http": "^7.2.16",
     "@angular/material": "^9.2.1",
     "@angular/platform-browser": "~9.0.3",
     "@angular/platform-browser-dynamic": "~9.0.3",
