--- a/FrontendFoodAnnotation/package.json
+++ b/FrontendFoodAnnotation/package.json
@@ -23,10 +23,17 @@
     "@angular/platform-browser": "~9.0.3",
     "@angular/platform-browser-dynamic": "~9.0.3",
     "@angular/router": "~9.0.3",
+    "@types/hammerjs": "^2.0.36",
+    "@types/jszip": "^3.1.7",
     "firebase": "^7.14.2",
     "fs": "0.0.1-security",
+    "hammerjs": "^2.0.8",
+    "igniteui-angular": "^9.0.13",
+    "jszip": "^3.3.0",
+    "resize-observer-polyfill": "^1.5.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
+    "web-animations-js": "^2.3.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -34,6 +41,7 @@
     "@angular/cli": "^9.0.7",
     "@angular/compiler-cli": "~9.0.3",
     "@angular/language-service": "~9.0.3",
+    "@igniteui/angular-schematics": "~9.0.500",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.12.36",
