--- a/FrontendFoodAnnotation/angular.json
+++ b/FrontendFoodAnnotation/angular.json
@@ -25,8 +25,7 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
-              "src/styles.css",
-              "node_modules/igniteui-angular/styles/igniteui-angular.css"
+              "src/styles.css"
             ],
             "scripts": []
           },
